Fix background color in dropdown items for dark mode

--- a/shkeeper/static/css/custom-main.dark.css
+++ b/shkeeper/static/css/custom-main.dark.css
@@ -187,6 +187,7 @@
 .dropdown__item {
     display: flex;
     flex-direction: row;
+    background-color: var(--background-color);
 }
 
 .dropdown__item-hide {
